--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kakebo",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -34,11 +34,11 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "expo-sqlite": "~15.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
