--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
     "expo-splash-screen": "~0.29.9",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
@@ -38,7 +39,7 @@
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "expo-sqlite": "~15.0.3"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
