chore: integrate NativeWind for styling and update project configuration to version 1.0.4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "module": "ES2022",
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./src/*"
       ],
-      "assets/*": [
+      "#/*": [
         "./assets/*"
       ]
     }
@@ -16,6 +16,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
