--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "clsx": "^2.1.1",
     "expo": "~52.0.24",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
