chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "kakebo",
+  "description": "Kakebo is a simple personal finance app inspered by the japanese savings method",
   "main": "expo-router/entry",
   "version": "1.0.5",
+  "license": "MPL-2.0",
+  "repository": "https://github.com/ribborges/kakebo",
+  "author": {
+    "name": "Richard Borges",
+    "email": "contato@richardborges.dev",
+    "url": "https://richardborges.dev"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
