--- a/package.json
+++ b/package.json
@@ -23,46 +23,46 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
     "clsx": "^2.1.1",
-    "expo": "~52.0.24",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.1",
-    "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.16",
+    "expo": "~52.0.37",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.19",
-    "expo-sqlite": "~15.0.5",
-    "expo-status-bar": "~2.0.0",
+    "expo-sqlite": "~15.1.2",
+    "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "^14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-screens": "~4.9.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.2",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
+    "@babel/core": "^7.26.9",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.1",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "private": true
 }
